# otel-data-api

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Dockerfile  Makefile  README.md  cspell.json  pyproject.toml  pyrightconfig.json  renovate.json  requirements.txt  run.py  setup.sh
.github/: copilot-instructions.md
.github/instructions/: python.instructions.md  tests.instructions.md
.github/skills/otel-data-api-deployment/: SKILL.md
.github/workflows/: docker.yml  lint.yml  publish-types.yml
app/: __init__.py  auth.py  config.py  database.py  middleware.py
app/models/: __init__.py  garmin.py  locations.py  reference.py  spatial.py
app/routers/: garmin.py  health.py  locations.py  reference.py  spatial.py  unified.py
docs/: PROJECT_PLAN.md  openapi.json  operations.md
scripts/: generate-openapi-spec.py  generate-types.sh
tests/: conftest.py  test_garmin.py  test_health.py  test_locations.py  test_middleware.py  test_reference.py  test_spatial.py  test_unified.py
